app/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-deployment
  namespace: default
  labels:
    app: url-shortener

spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
      - name: url-shortener-app
        resources:
          requests:
            memory: "16Mi" 
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
