app/base/rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: url-shortener-deployment
  namespace: default
  labels:
    app: url-shortener
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
        - name: url-shortener-app
          imagePullPolicy: Always
          resources:
            requests:
              memory: "16Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
    strategy:
      canary:
        steps:
          - setWeight: 20
          - pause: { }
          - setWeight: 40
          - pause: { duration: 40s }
          - setWeight: 60
          - pause: { duration: 20s }
          - setWeight: 80
          - pause: { duration: 20s }
