app/base/service.yml
#apiVersion: v1
#kind: Service
#metadata:
#  name: app-service
#  namespace: default
#spec:
#  selector:
#    app: url-shortener
#  ports:
#  - port: 80
#    targetPort: 8080
#    name: app-port
#  type: ClusterIP

apiVersion: v1
kind: Service
metadata:
  name: canary-rollout
  namespace: default
  labels:
    app: url-shortener-canary
spec:
  selector:
    app: url-shortener
    version: canary
  ports:
    - name: app-port
      port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: stable-rollout
  namespace: default
  labels:
    app: url-shortener-stable
spec:
  selector:
    app: url-shortener
    version: stable
  ports:
    - name: app-port
      port: 80
      targetPort: 8080
