app/base/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rate-limiter
  namespace: default
spec:
  rateLimit:
    average: 100
    burst: 50

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app-ingressroute-canary
spec:
  routes:
    - match: Path(`/`)
      kind: Rule
      services:
        - name: canary-rollout
          port: 80
    - match: Path(`/shorten`)
      kind: Rule
      services:
        - name: canary-rollout
          port: 80
      middlewares:
        - name: rate-limiter
    - match: PathPrefix(`/s/`)
      kind: Rule
      services:
        - name: canary-rollout
          port: 80
      middlewares:
        - name: rate-limiter

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app-ingressroute-stable
spec:
  routes:
    - match: Path(`/`)
      kind: Rule
      services:
        - name: stable-rollout
          port: 80
    - match: Path(`/shorten`)
      kind: Rule
      services:
        - name: stable-rollout
          port: 80
      middlewares:
        - name: rate-limiter
    - match: PathPrefix(`/s/`)
      kind: Rule
      services:
        - name: stable-rollout
          port: 80
      middlewares:
        - name: rate-limiter
